Fix social links on mobile screens

--- a/src/less/site.less
+++ b/src/less/site.less
@@ -223,6 +223,7 @@ body {
     li {
 	float: left;
 	display: block;
+	padding: 0px;
     }
 }
 
